# SeisFormer-GNN

./: pyproject.toml
model_MN-Seisformer/: config.json  evaluation_metrics.json
model_Patch_fusion/: config.json  evaluation_metrics.json
